[package]
name = "AirAlertTBot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.128"
log = "0.4.22"
pretty_env_logger = "0.5"
time = "0.3.36"
serde = { version = "1.0.210", features = ["derive"] }
dotenv = "0.15.0"
dotenv-vault = "0.1.2"
dotenv_codegen = "0.15.0"

